# gbstim

./: .gitmodules  README.md  pyproject.toml
gbstim/: bposd.py  device.py  gb.py  mwpf.py
notebook/: bp_data.ipynb  gbcodes.ipynb
notebook/data/: check_matrices.pkl
scripts/: ler_plots.ipynb  ler_sim.py  run_sim.sh
scripts/codes/: 128-16-8-w-8.pkl  144-12-12-w-6.pkl  72-12-6-w-6.pkl  72-8-10-w-8.pkl  90-8-10-w-6.pkl  96-10-12-w-8.pkl
scripts/results/: 72-12-6-w-6-samples.pkl  90-8-10-w-6-samples.pkl
tests/: enola_compare.ipynb  gbcodes.ipynb
tests/results/time/: 72-12-6_gb_code_time.json
