[tool.poetry]
name = "gbstim"
version = "0.1.0"
description = ""
authors = ["Joshua Viszlai <viszlai@uchicago.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
stim = "^1.13.0"
sinter = "^1.13.0"
matplotlib = "^3.9.2"
ldpc = "^2.3.4"
galois = "^0.4.2"
beliefmatching = "^0.1.1"
ipykernel = "^6.29.5"
pyconcorde = {git = "https://github.com/jvkersch/pyconcorde"}
parse = "^1.20.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
